force-app/main/default/objects/Behavior_Log__c/Behavior_Log__c.object-meta.xml
<CustomObject>
    <description>Stores records of user behavior and DML events captured by OrgPulse.</description>
    <label>Behavior Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>