force-app/main/default/objects/Behavior_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Records the date and time when the user action or behavior occurred. Used for leaderboard calculation and behavioral pattern analysis.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>