force-app/main/default/objects/Behavior_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Action_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Record_ID__c</columns>
    <columns>Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>